FrontEnd/Modules/Base/Css/masterpage.css
/* ... */
.meta-data > li:last-child:after {
	display: none;
}
footer .actions {
	margin-left: auto;
}
footer .actions button {
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	min-height: 42px;
	min-width: 42px;
}
footer input ~ .meta-data li {
	display: none;
}
footer input ~ .meta-data li.visible,
footer input ~ .meta-data li.meta-toggle,
footer input:checked ~ .meta-data li {
	display: inline-block;
}
footer input ~ .meta-data li.meta-toggle label span:first-child,
footer input:checked ~ .meta-data li.meta-toggle label span:last-child {
	display: block;
}
footer input:checked ~ .meta-data li.meta-toggle label span:first-child,
footer input ~ .meta-data li.meta-toggle label span:last-child {
	display: none;
}

/* QR */
.qr .k-widget {
	text-align: center;
}
.qr .k-widget img {
	margin: auto;
}
.qr .k-widget a {
	color: var(--primary-color);
	display: inline-block;
	margin-bottom: 15px;
}

/* LOADER */
.fullscreen-loader:not(.loading),
.grid-loader:not(.loading) {
	display: none;
}
.fullscreen-loader,
.grid-loader {
	opacity: 1;
	background: var(--rgba-loader-bg);
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}
.fullscreen-loader {
	z-index: 90000;
	position: fixed;
}
.grid-loader {
	z-index: 5;
	position: absolute;
}
.loader-icon {
	opacity: 0;
}

.loading .loader-icon {
	display: inline-block;
	width: 28px;
	height: 28px;
	opacity: 1;
	position: relative;
	margin: 0 5px;
}

.loader-icon div {
	box-sizing: border-box;
	display: block;
	position: absolute;
	width: 28px;
	height: 28px;
	margin: 0;
	border: 4px solid var(--primary-color);
	border-radius: 50%;
	animation: loading 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
	border-color: var(--primary-color) transparent transparent transparent;
}

.loader-icon.white div {
	border-color: var(--white-color) transparent transparent transparent;
}

.fullscreen-loader .loader-icon,
.grid-loader .loader-icon {
	margin: 0 50%;
	top: 50%;
	transform: translate(0, -50%);
}

.fullscreen-loader .loader-icon,
.fullscreen-loader .loader-icon div {
	width: 50px;
	height: 50px;
}

.loader-icon div:nth-child(1) {
	animation-delay: -0.45s;
}

.loader-icon div:nth-child(2) {
	animation-delay: -0.3s;
}

.loader-icon div:nth-child(3) {
	animation-delay: -0.15s;
}

@keyframes loading {
	0% {
		transform: rotate(0deg);
	}

	100% {
		transform: rotate(360deg);
	}
}

@media screen and (max-width: 1024px) {
	.k-grid table {
		min-width: 1600px;
	}
	.k-grid td > span {
		display: -webkit-box;
		overflow: hidden;
		-webkit-line-clamp: 3;
		-webkit-box-orient: vertical;
	}
	.editMenu {
		display: none;
	}
	.k-menu-scroll-wrapper {
		width: 100% !important;
		height: 120px;
		margin-top: 12px;
		position: relative;
	}
	.k-menu-scroll-wrapper .k-widget.k-menu {
		margin-top: 0;
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
	}
	.formview.full :not(.item-window-actions) > .item, :not(.item-window-actions) > .item {
		min-width: 50%;
	}

	footer .metaData {
		max-width: none;
		padding-bottom: 15px;
		width: 100%;
	}
	footer {
		flex-wrap: wrap;
	}
	
	.k-window.k-window-maximized {
		margin-left: unset !important;
		margin-right: unset !important;
		top: 10px;
		right: 10px;
		bottom: 10px;
		left: 10px;
        width: unset !important;
        max-width: unset !important;
	}
}
@media screen and (max-width: 800px) {
	.formview.full :not(.item-window-actions) > .item, :not(.item-window-actions) > .item {
		min-width: 100%;
	}
}

/* Grid styling - in case the grid is first or second child of its parent container */
.k-window-content > .pane-content {
	min-height: auto;
}
.k-window-content > .pane-content .k-tabstrip .k-content.k-active,
.k-window-content > .pane-content .k-tabstrip .dynamicTabContent {
	height: auto;
}

.k-window-content > .pane-content .k-tabstrip .dynamicTabContent script ~ .gridview:nth-child(3) .k-grid {
	flex-basis: 100%;
	display: flex;
	flex-direction: column;
}

.dynamicTabContent .gridview:only-child .k-grid {
	display: flex;
	flex-direction: column;
	height: calc(100% - 20px);
	max-height: calc(100% - 20px);
}

.k-window-content > .pane-content .k-tabstrip .dynamicTabContent .gridview:not(:only-child) {
	min-height: auto;
	height: auto;
}

/* Grid styling - full screen */
.pane-content.entity-container .k-tabstrip-wrapper {
	height: 100%;
}
.pane-content.entity-container .k-tabstrip-wrapper,
.pane-content.entity-container .k-tabstrip-wrapper .k-tabstrip {
	height: 100%;
}

.pane-content.entity-container .k-tabstrip .k-tabstrip-items.hidden + .k-content.k-active {
	height: 100%;
	display: flex !important;
	flex-direction: column;
}

.pane-content.entity-container .k-tabstrip .k-tabstrip-items.hidden + .k-content.k-active .formview:last-child:nth-child(2) {
	flex-grow: 1;
}

.pane-content.entity-container .k-tabstrip .k-tabstrip-items.hidden + .k-content.k-active .formview:last-child:nth-child(2) .gridview,
.pane-content.entity-container .k-tabstrip .k-tabstrip-items.hidden + .k-content.k-active .formview:last-child:nth-child(2) .gridview .k-grid {
	height: 100%;
	max-height: 100%;
}

body.gridViewMode {
}

/** ICONS **/
.k-sprite {
	color: var(--dark-txt);
	font-family: 'icomoon' !important;
	font-size: 16px;
	margin-right: 5px;
	padding-top: 1px;
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.k-sprite.rootfolder:before {
	content: "\e972";
}

.k-sprite.folder:before {
	content: "\e968";
}

.k-sprite.wiserfolderclosed:before {
	content: "\e96d";
}

.k-sprite.wiserfolderopened:before {
	content: "\e965";
}

.k-sprite.pdf:before {
	content: "\e956";
}

.k-sprite.html:before {
	content: "\e957";
}

.k-sprite.image:before {
	content: "\e9eb";
}

.k-sprite.file:before {
	content: "\e94b";
}

.k-sprite.edit:before {
	content: "\e9e8";
}

.k-sprite.delete:before {
	content: "\e93f";
}

